--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "client": "webpack serve --mode development --open",
     "build": "webpack --mode production",
+    "vercel-build": "npm run build",
     "start": "node server/index.js",
     "server": "node server/index.js",
     "dev": "concurrently \"npm run server\" \"npm run client\""
